2 commit - change color

--- a/Sample02.html
+++ b/Sample02.html
@@ -2,14 +2,14 @@
  <head>
   <title> My first Page </title>
   <style>
-/* фон красного цвета */
+/* С„РѕРЅ РєСЂР°СЃРЅРѕРіРѕ С†РІРµС‚Р° */
   body{background-color:red;}
-/* текст зеленого цвета */
-  p{color:green;}
+/* С‚РµРєСЃС‚ Р·РµР»РµРЅРѕРіРѕ С†РІРµС‚Р° */
+  p{color:blue;}
   </style>
  </head>
  <body>
- <h1> Это первая страница </h1>
-  <p> Привет! </p>
+ <h1> Р­С‚Рѕ РїРµСЂРІР°СЏ СЃС‚СЂР°РЅРёС†Р° </h1>
+  <p> РџСЂРёРІРµС‚! </p>
  </body>
 </html>
