3 commit - change title

--- a/Sample02.html
+++ b/Sample02.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title> My first Page </title>
+  <title> My second Page </title>
   <style>
 /* фон красного цвета */
   body{background-color:red;}
